syntax = "proto3";

package pbtypes;

import "proto/pbcrypto/key.proto";
import "gogoproto-1.4.3/gogoproto/gogo.proto";

message Validator {
  string id = 1 [(gogoproto.customname) = "ID"];
  pbcrypto.BLS12PublicKey public_key  = 2;
  int64 voting_power                  = 3;
  int64 leader_priority               = 4;
}

message ValidatorSet {
  repeated Validator validators = 1;
  Validator Leader              = 2;
  int64 total_voting_power      = 3;
}